fixed gap & refactored code

--- a/css/formStyles.css
+++ b/css/formStyles.css
@@ -51,7 +51,7 @@ body {
 
 @media screen and (max-width: 900px) {
     .default-gap {
-        gap: 0.5rem;
+        gap: 0.2rem;
     }
 
     .test-form {
